--- a/.github/workflows/deploy_tf_wf.yml
+++ b/.github/workflows/deploy_tf_wf.yml
@@ -4,7 +4,7 @@ permissions:
   id-token: write # Necesario para OIDC
   contents: read  # Permite leer el código del repositorio
 env:
-  TF_WORKING_DIR: ./tf_work_folder
+  TF_WORKING_DIR: tf_work_folder/
 jobs:
   terraform_apply:
     name: Apply Terraform Changes
