--- a/.github/workflows/plan_tf_wf.yml
+++ b/.github/workflows/plan_tf_wf.yml
@@ -6,7 +6,7 @@ permissions:
   id-token: write # Necesario para OIDC
   contents: read  # Permite leer el código del repositorio
 env:
-  TF_WORKING_DIR: ./tf_work_folder
+  TF_WORKING_DIR: tf_work_folder/
 jobs:
   terraform_plan:
     name: deploy to aws
