ADD: Main TF in Working Folder

--- a/.github/workflows/deploy_tf_wf.yml
+++ b/.github/workflows/deploy_tf_wf.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4 # ¡Actualizado a v4!
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE }}
           aws-region: ${{ vars.AWS_REGION }}
