--- a/.github/workflows/plan_tf_wf.yml
+++ b/.github/workflows/plan_tf_wf.yml
@@ -9,7 +9,7 @@ env:
   TF_WORKING_DIR: tf_work_folder/
 jobs:
   terraform_plan:
-    name: deploy to aws
+    name: Generate Terraform Plan
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout repository
@@ -26,7 +26,12 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.2.5
-          
+      
+      - name: Terraform Init
+        id: init
+        run: terraform init -backend-config="bucket=${{ secrets.TF_STATE_BUCKET_NAME }}" -backend-config="key=${{ vars.TF_STATE_FILE }}" -backend-config="region=${{ vars.AWS_REGION }}"
+        working-directory: .
+
       #Validación de Calidad
       - name: Install tflint
         run: |
@@ -45,10 +50,7 @@ jobs:
         working-directory: ${{ env.TF_WORKING_DIR }}
       #Fin Validacion
       
-      - name: Terraform Init
-        id: init
-        run: terraform init -backend-config="bucket=${{ secrets.TF_STATE_BUCKET_NAME }}" -backend-config="key=${{ vars.TF_STATE_FILE }}" -backend-config="region=${{ vars.AWS_REGION }}"
-        working-directory: .
+      
         
       - name: Terraform plan
         id: plan
