--- a/.github/workflows/sync_files_wf.yml
+++ b/.github/workflows/sync_files_wf.yml
@@ -1,20 +1,31 @@
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
+permissions:
+  id-token: write
+  contents: read
 
+env:
+  SOURCE_CODE_PATH: app_code/
+  S3_DESTINATION: s3://${{ secrets.CODE_S3_BUCKET}}
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  AWS_ROLE_ARN: ${{ secrets.AWS_ROLE  }}
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ env.AWS_ROLE_ARN }}
+          aws-region: ${{ env.AWS_REGION }}
+          role-session-name: GitHub-OIDC-S3-Sync
 
-      - name: Run a multi-line script
+      - name: Sync files to S3
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "Sincronizando desde ${SOURCE_CODE_PATH} a ${S3_DESTINATION}"
+          aws s3 sync "${SOURCE_CODE_PATH}" "${S3_DESTINATION}" --delete
