--- a/.github/workflows/plan_tf_wf.yml
+++ b/.github/workflows/plan_tf_wf.yml
@@ -44,7 +44,7 @@ jobs:
         id: tflint
         run: tflint --enable-rule=terraform_unused_declarations
         working-directory: ${{ env.TF_WORKING_DIR }}
-        continue-on-error: false # Haz que el job falle si hay errores de linting
+        continue-on-error: false 
         
       - name: Terraform validate
         id: validate
@@ -59,7 +59,7 @@ jobs:
         continue-on-error: false
 
       - name: Display Terraform Plan Output
-        run: terraform show -no-color tfplan # Use -no-color for cleaner logs
+        run: terraform show -no-color tfplan 
         working-directory: ${{ env.TF_WORKING_DIR }}
         
       - name: Upload Terraform Plan artifact
