--- a/.github/workflows/deploy_tf_aws.yml
+++ b/.github/workflows/deploy_tf_aws.yml
@@ -10,7 +10,7 @@ permissions:
   contents: read  # Permite leer el código del repositorio
   actions: read
 env:
-  TF_WORKING_DIR: tf_work_folder/
+  TF_WORKING_DIR: ./
 jobs:
   terraform_apply:
     name: Apply Terraform Changes
@@ -46,5 +46,5 @@ jobs:
 
       - name: Terraform Apply
         id: apply
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve ${{ env.TF_WORKING_DIR }}/tfplan-artifact/tfplan
         working-directory: ${{ env.TF_WORKING_DIR }}
