--- a/.github/workflows/plan_tf_wf.yml
+++ b/.github/workflows/plan_tf_wf.yml
@@ -4,6 +4,7 @@ on:
       - architecture
     paths:
       - 'tf_work_folder/**'
+  workflow_dispatch:
 permissions:
   id-token: write # Necesario para OIDC
   contents: read  # Permite leer el código del repositorio
