--- a/.github/workflows/sync_files_wf.yml
+++ b/.github/workflows/sync_files_wf.yml
@@ -10,7 +10,7 @@ permissions:
 env:
   SOURCE_CODE_PATH: app_code/
   S3_DESTINATION: s3://${{ secrets.CODE_S3_BUCKET}}
-  AWS_REGION: ${{ secrets.AWS_REGION }}
+  AWS_REGION: ${{ vars.AWS_REGION }}
   AWS_ROLE_ARN: ${{ secrets.AWS_ROLE  }}
 jobs:
   build:
