ADD: Manual execution

--- a/.github/workflows/sync_web_files.yml
+++ b/.github/workflows/sync_web_files.yml
@@ -3,6 +3,7 @@ on:
     branches: [ "main" ]
     paths:
       - 'web_source/**'
+  workflow_dispatch:
 permissions:
   id-token: write
   contents: read
