--- a/.github/workflows/sync_files_wf.yml
+++ b/.github/workflows/sync_files_wf.yml
@@ -3,6 +3,7 @@ on:
     branches: [ "main" ]
     paths:
       - 'app_code/**'
+  workflow_dispatch:
 permissions:
   id-token: write
   contents: read
