--- a/.github/workflows/sync_files_wf.yml
+++ b/.github/workflows/sync_files_wf.yml
@@ -20,14 +20,17 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+    
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ env.AWS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
           role-session-name: GitHub-OIDC-S3-Sync
-
+          
+      - name: Verify AWS Caller Identity
+        run: aws sts get-caller-identity
+        
       - name: Sync files to S3
         run: |
           echo "Sincronizando desde ${SOURCE_CODE_PATH} a ${S3_DESTINATION}"
