ADD: Change root files

--- a/root_web_app/amplify/backend/backend-config.json
+++ b/root_web_app/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "educappsdd978580a": {
+    "rootwebapp4bf6a725": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
