--- a/root_web_app/amplify/.config/project-config.json
+++ b/root_web_app/amplify/.config/project-config.json
@@ -1,6 +1,6 @@
 {
-  "whyContinueWithGen1": "I find the Gen 1 CLI easier to use",
-  "projectName": "educappsd",
+  "whyContinueWithGen1": "Prefer not to answer",
+  "projectName": "rootwebapp",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
